# strafer

./: CMakeLists.txt  README.md
include/StraferLib/: Strafe.h  StrafeManager.h
src/app/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Strafe.cpp  StrafeManager.cpp
tests/: CMakeLists.txt  strafer_test.cpp
